--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     font-size: 18px;
     font-family: 'Lato', sans-serif;
 }
-/* Test comment */
+/*  */
 .mainContainer {
     width: 620px;
     margin: 0px auto 0px auto;
